# OpenDenoise

./: .gitignore  EXPERIMENTS.md  README.md  TODO.md  pyproject.toml
darktable/: opendenoise.lua
opendenoise/: __init__.py  __main__.py  cli.py  engine.py  experiment.py  mode_bayer.py  mode_post.py  mode_raw.py
